<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="lq">“</string> <string name="rq">”</string>

    <string name="app_name">Simple Lib Client</string>
    <string name="action_settings">Settings</string>
    <string name="btSearchGoogle">Search in Google Books</string>
    <string name="btRunBarcode">Run Barcode Scanner</string>
    <string name="btLoginMain">Log in</string>

    <string name="bookTitle">Book title</string>
    <string name="bookAuthor">Book author</string>
    <string name="bookPublisher">Publisher</string>
    <string name="ISBN10">ISBN10 (10 digits)</string>
    <string name="ISBN13">ISBN13 (13 digits)</string>
    <string name="bookPubYear">Publication year</string>

    <string name="entNewTitle">Enter new title</string>
    <string name="entNewAuthor">Enter new author</string>
    <string name="entNewPublisher">Enter new publisher</string>

    <string name="pref_slm_host">Simple Library Manager hostname</string>
    <string name="pref_slm_host_summ">URL (IP address or hostname) of a server providing SLM database.</string>
    <string name="pref_slm_host_default" translatable="false">192.168.2.130</string>
    <string name="pref_slm_host_port">Host port</string>
    <string name="pref_slm_host_port_summ">Port number on which the SLM server listens</string>

    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_dbsearch">Search SLM database</string>

    <string name="ISBN" translatable="false">ISBN: </string>
    <string name="searchQuery">Query: </string>
    <string name="btSearchISBN">by ISBN</string>
    <string name="btSearchTitle">by Title</string>
    <string name="btSearchAuthor">by Author</string>
    <string name="btLocalSearch">Search in SLM database</string>
    <string name="btAddBook">Add new book</string>
    <string name="btConfirm">Confirm</string>

    <string name="title_activity_login">Log into SLM</string>
    <string name="username_name">Username</string>
    <string name="password_name">Password</string>
    <string name="login_confirm">Log in</string>

    <string name="connection_timeout">Connection timed out</string>
    <string name="generic_timeout_msg">The server has not responded in allowed time</string>
    <string name="slm_timeout_msg">SLM server does not respond in allowed time</string>
    <string name="google_timeout_msg">Google Books server has not responded in allowed time</string>

    <string name="empty_field">Empty query</string>
    <string name="empty_field_msg">Could not find anything, because the query is empty</string>

    <string name="login_timeout">Could not log in because server did not respond</string>
    <string name="logged_as">Logged as:</string>
    <string name="wrong_cred">Wrong credentials (username or password)</string>
    <string name="user_inactive">This user account is inactive</string>

    <string name="error">Error!</string>
    <string name="invalid_json">Invalid json format retrieved</string>

    <string name="success">Success!</string>
    <string name="success_added_book">Successfully added book:</string>

    <string name="title_activity_slmbook">SLM Book</string>
    <string name="no_book_found">No book found in SLM database</string>

    <string name="bookChoose">Choose a book</string>
    <string name="btAddNewCopy">Add another copy</string>

    <string name="barcode_not_installed">Barcode scanner not installed</string>
    <string name="barcode_not_installed_msg">You need to install barcode scanner application to use this feature. Do you want to install it now?"</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="OK">OK</string>
    <string name="title_activity_barcode">Add new book (1)</string>
    <string name="title_activity_addbook">Add new book (2)</string>
</resources>
